--- a/styles/register.css
+++ b/styles/register.css
@@ -18,3 +18,11 @@
     color: white;
     padding: 5px;
 }
+
+#success-message {
+    display: none;
+    background-color: rgb(0, 255, 115);
+    color: white;
+    text-shadow: 1px 1px black;
+    padding: 5px;
+}
