--- a/styles/users.css
+++ b/styles/users.css
@@ -1,3 +1,12 @@
+
+@media screen and (min-width: 500px) {
+
+    html {
+        background-image: url("./images/background-silouettes.jpg");
+    }
+
+}
+
 #users-list>div {
     margin: 5px;
     background-color: aliceblue;
@@ -6,4 +15,9 @@
     border-radius: 3px;
     border: solid 1px#8daac1;
     color: #135081;
+    transition: 0.7s background;
+}
+
+#users-list>div:hover {
+    background-color: #a8c8e3;
 }
